Login GUI updates with

--- a/src/resources/language/lang_en.properties
+++ b/src/resources/language/lang_en.properties
@@ -15,3 +15,5 @@ username=Username
 password=Password
 dberror=Unable to connect database server
 loginfail=Invalid username or password
+loginmaptitle=Global intensity of job offers
+loginmaptext=Say goodbye for unemployment
