--- a/src/resources/language/lang_fr.properties
+++ b/src/resources/language/lang_fr.properties
@@ -15,3 +15,5 @@ username=Nom d'utilisateur
 password=Mot de passe
 dberror=probl\u00e8me de connection base de donn\u00e9es
 loginfail=Nom d'utilisateur ou mot de passe invalide
+loginmaptitle=Intensit\u00e9 des offres d'emploi \u00e0 l'\u00e9chelle mondiale
+loginmaptext=Dites adieu au ch\u00f4mage
