Fixing remote database

--- a/src/resources/language/lang_en.properties
+++ b/src/resources/language/lang_en.properties
@@ -33,3 +33,17 @@ back =Back
 submit=Submit
 userform=Your personal data
 company=Your company
+
+women=Ms.
+man=Mr.
+gender=Gender
+
+photo=Photo
+companyname=Company name
+
+
+description=Description
+companyadress=Company Adress
+domain=Domain
+image=Image
+phone=Phone
