--- a/src/resources/language/lang_fr.properties
+++ b/src/resources/language/lang_fr.properties
@@ -34,3 +34,16 @@ submit=S'inscrire
 
 userform=Vos donn\u00e9es
 company=Votre Entreprise
+
+women=Femme
+man=Homme
+gender=Sexe
+
+photo=Photo
+companyname=Nom d'entreprise
+description=Description
+companyadress=Adresse de l'entreprise
+domain=Domaine
+image=Image
+phone=T\u00e9l\u00e9phone
+
